bindings/unity/Runtime/Native/xybrid.h

#define XYBRID_ROLE_USER 1
/*
 Opaque handle to a model loader.

 This handle is created by `xybrid_model_loader_from_registry`,
 `xybrid_model_loader_from_bundle`, or `xybrid_model_loader_from_directory`
 and must be freed with `xybrid_model_loader_free`.
 */
typedef struct XybridModelLoaderHandle {
  void *_0;
} XybridModelLoaderHandle;
/*
 Opaque handle to a loaded model.

 This handle is created by `xybrid_model_loader_load` and must be
 freed with `xybrid_model_free`.
 */
typedef struct XybridModelHandle {
  void *_0;
} XybridModelHandle;
/*
 Opaque handle to an envelope (input data).

 This handle is created by `xybrid_envelope_audio` or `xybrid_envelope_text`
 and must be freed with `xybrid_envelope_free`.
 */
typedef struct XybridEnvelopeHandle {
  void *_0;
} XybridEnvelopeHandle;
/*
 Opaque handle to a conversation context.

 This handle is created by `xybrid_context_new` and must be freed with
 `xybrid_context_free`.
 */
typedef struct XybridContextHandle {
  void *_0;
} XybridContextHandle;
/*
 Opaque handle to a generation config.

 This handle is created by `xybrid_generation_config_new` (or a preset
 like `xybrid_generation_config_greedy`) and must be freed with
 `xybrid_generation_config_free`.
 */
typedef struct XybridGenerationConfigHandle {
  void *_0;
} XybridGenerationConfigHandle;
/*
 Opaque handle to an inference result.

 This handle is created by `xybrid_model_run` and must be freed with
 `xybrid_result_free`.
 */
typedef struct XybridResultHandle {
  void *_0;
} XybridResultHandle;
/*
 Get the last error message.

 Returns a pointer to a null-terminated string containing the last error
 message, or null if no error has occurred. The returned pointer is valid
 until the next xybrid function call on the same thread.

 # Returns

 A pointer to the last error message, or null if no error.

 # Example (C)

 ```c
 XybridModelHandle* model = xybrid_model_loader_load(loader);
 if (model == NULL) {
     const char* error = xybrid_last_error();
     fprintf(stderr, "Failed to load: %s\n", error ? error : "unknown error");
 }
 ```
 */
const char *xybrid_last_error(void);
/*
 Load a model using the loader.

 This function loads the model from the registry, local bundle, or directory,
 depending on how the loader was created.

 # Parameters

 - `handle`: A handle to the model loader created by `xybrid_model_loader_from_registry`,
   `xybrid_model_loader_from_bundle`, or `xybrid_model_loader_from_directory`.

 # Returns

 A handle to the loaded model, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelHandle* model = xybrid_model_loader_load(loader);
 if (model == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     xybrid_model_loader_free(loader);
     return 1;
 }
 // Use model...
 xybrid_model_free(model);
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelHandle *xybrid_model_loader_load(struct XybridModelLoaderHandle *handle);
 XybridEnvelopeHandle* envelope = xybrid_envelope_audio(
     audio_data, sizeof(audio_data), 16000, 1);
 if (envelope == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use envelope...
 xybrid_envelope_free(envelope);
 ```
 */
struct XybridEnvelopeHandle *xybrid_envelope_audio(const uint8_t *bytes,
                                                   uintptr_t len,
                                                   uint32_t sample_rate,
                                                   uint32_t channels);
/*
 Create an envelope containing text data.

 This function creates an envelope containing text for TTS or LLM inference.

 # Parameters

 - `text`: A null-terminated string containing the text. Must not be null.

 # Returns

 A handle to the envelope, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridEnvelopeHandle* envelope = xybrid_envelope_text("Hello, world!");
 if (envelope == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use envelope...
 xybrid_envelope_free(envelope);
 ```
 */
struct XybridEnvelopeHandle *xybrid_envelope_text(const char *text);
/*
 Free an envelope handle.

 This function frees the memory associated with an envelope handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the envelope to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_envelope_free(envelope);
 envelope = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_envelope_free(struct XybridEnvelopeHandle *handle);
/*
 Create a new conversation context with a generated UUID.

 # Returns

 A handle to the conversation context, or null on failure.

 # Example (C)

 ```c
 XybridContextHandle* ctx = xybrid_context_new();
 if (ctx == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use context...
 xybrid_context_free(ctx);
 ```
 */
struct XybridContextHandle *xybrid_context_new(void);
/*
 Create a new conversation context with a specific ID.

 # Parameters

 - `id`: A null-terminated string containing the context ID.

 # Returns

 A handle to the conversation context, or null on failure.

 # Example (C)

 ```c
 XybridContextHandle* ctx = xybrid_context_with_id("session-123");
 ```
 */
struct XybridContextHandle *xybrid_context_with_id(const char *id);
/*
 Set the system prompt for a conversation context.

 The system prompt defines the assistant's behavior and persists
 across `xybrid_context_clear()` calls.

 # Parameters

 - `handle`: A handle to the conversation context.
 - `text`: A null-terminated string containing the system prompt.

 # Returns

 - `0` on success
 - Non-zero on failure (check `xybrid_last_error()`)

 # Example (C)

 ```c
 xybrid_context_set_system(ctx, "You are a helpful assistant.");
 ```
 */
int32_t xybrid_context_set_system(struct XybridContextHandle *handle, const char *text);
/*
 Set the maximum history length for a conversation context.

 When the history exceeds this limit, oldest messages are dropped (FIFO).
 Default is 50 messages.

 # Parameters

 - `handle`: A handle to the conversation context.
 - `max_len`: Maximum number of history entries.

 # Returns

 - `0` on success
 - Non-zero on failure
 */
int32_t xybrid_context_set_max_history_len(struct XybridContextHandle *handle, uint32_t max_len);
/*
 Push an envelope to the conversation history.

 The envelope should have a role set (use `xybrid_envelope_text_with_role`).

 # Parameters

 - `handle`: A handle to the conversation context.
 - `envelope`: A handle to the envelope to push.

 # Returns

 - `0` on success
 - Non-zero on failure

 # Example (C)

 ```c
 XybridEnvelopeHandle* msg = xybrid_envelope_text_with_role("Hello!", XYBRID_ROLE_USER);
 xybrid_context_push(ctx, msg);
 xybrid_envelope_free(msg);
 ```
 */
int32_t xybrid_context_push(struct XybridContextHandle *handle,
                            struct XybridEnvelopeHandle *envelope);
/*
 Clear the conversation history but preserve the system prompt and ID.

 # Parameters

 - `handle`: A handle to the conversation context.

 # Returns

 - `0` on success
 - Non-zero on failure
 */
int32_t xybrid_context_clear(struct XybridContextHandle *handle);
/*
 Get the conversation context ID.

 Returns a pointer to a null-terminated string containing the context ID.
 The returned pointer is valid until the context handle is freed.
 Do NOT free the returned string.

 # Parameters

 - `handle`: A handle to the conversation context.

 # Returns

 A pointer to the context ID string, or null on failure.
 */
const char *xybrid_context_id(struct XybridContextHandle *handle);
/*
 Get the current history length (excluding system prompt).

 # Parameters

 - `handle`: A handle to the conversation context.

 # Returns

 The number of messages in the history, or 0 if the handle is null/invalid.
 */
uint32_t xybrid_context_history_len(struct XybridContextHandle *handle);
/*
 Check if a system prompt is set.

 # Parameters

 - `handle`: A handle to the conversation context.

 # Returns

 - `1` if a system prompt is set
 - `0` if not, or if the handle is null/invalid
 */
int32_t xybrid_context_has_system(struct XybridContextHandle *handle);
/*
 Free a conversation context handle.

 This function frees the memory associated with a context handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the context to free. May be null (no-op).
 */
void xybrid_context_free(struct XybridContextHandle *handle);
/*
 Create an envelope containing text data with a message role.

 This is used for building conversation context with proper role tagging.

 # Parameters

 - `text`: A null-terminated string containing the text.
 - `role`: The message role (0=System, 1=User, 2=Assistant).

 # Returns

 A handle to the envelope, or null on failure.

 # Example (C)

 ```c
 XybridEnvelopeHandle* user_msg = xybrid_envelope_text_with_role("Hello!", XYBRID_ROLE_USER);
 xybrid_context_push(ctx, user_msg);
 xybrid_envelope_free(user_msg);
 ```
 */
struct XybridEnvelopeHandle *xybrid_envelope_text_with_role(const char *text, int32_t role);
/*
 Run inference on a model with the given input envelope.

 This function executes inference using the loaded model and returns
 a result handle containing the output or error information.

 # Parameters

 - `model`: A handle to the loaded model (from `xybrid_model_loader_load`).
 - `envelope`: A handle to the input envelope (from `xybrid_envelope_audio` or `xybrid_envelope_text`).

 # Returns

 A handle to the result, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.
 The envelope is NOT consumed - it can be reused for multiple inferences.

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 if (result == NULL) {
     fprintf(stderr, "Inference failed: %s\n", xybrid_last_error());
     return 1;
 }

 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     printf("Result: %s\n", text);
 } else {
     const char* error = xybrid_result_error(result);
     printf("Error: %s\n", error);
 }

 xybrid_result_free(result);
 ```
 */
struct XybridResultHandle *xybrid_model_run(struct XybridModelHandle *model,
                                            struct XybridEnvelopeHandle *envelope,
                                            struct XybridGenerationConfigHandle *config);
/*
 Check if the inference was successful.

 Returns 1 if the inference succeeded, 0 if it failed.
 If the handle is null or invalid, returns 0.

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 - `1` if success is true
 - `0` if success is false, or if the handle is null/invalid

 # Example (C)

 ```c
 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     printf("Result: %s\n", text);
 } else {
     const char* error = xybrid_result_error(result);
     printf("Error: %s\n", error ? error : "unknown");
 }
 ```
 */
int32_t xybrid_result_success(struct XybridResultHandle *result);
/*
 Get the error message from a failed inference.

 Returns a pointer to a null-terminated string containing the error message,
 or null if there was no error. The returned pointer is valid for the
 lifetime of the result handle - do NOT free it with xybrid_free_string().

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 A pointer to the error message string, or null if no error.
 The pointer is valid until the result handle is freed.

 # Example (C)

 ```c
 if (!xybrid_result_success(result)) {
     const char* error = xybrid_result_error(result);
     fprintf(stderr, "Inference failed: %s\n", error ? error : "unknown error");
 }
 ```
 */
const char *xybrid_result_error(struct XybridResultHandle *result);
/*
 Get the text output from an inference result.

 Returns a pointer to a null-terminated string containing the text output,
 or null if the result does not contain text. The returned pointer is valid
 for the lifetime of the result handle - do NOT free it with xybrid_free_string().

 # Parameters

 - `result`: A handle to the inference result.

 # Returns

 A pointer to the text output string, or null if no text output.
 The pointer is valid until the result handle is freed.

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 if (xybrid_result_success(result)) {
     const char* text = xybrid_result_text(result);
     if (text != NULL) {
         printf("Transcription: %s\n", text);
     }
 }
 xybrid_result_free(result);
 ```
 */
const char *xybrid_result_text(struct XybridResultHandle *result);
/*
 Free an inference result handle.

 This function frees the memory associated with an inference result handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the result to free. May be null (no-op).

 # Example (C)

 ```c
 XybridResultHandle* result = xybrid_model_run(model, envelope, std::ptr::null_mut());
 // ... use result ...
 xybrid_result_free(result);
 result = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_result_free(struct XybridResultHandle *handle);